# gaa-retreat-2025-data-models

./: .gitignore  README.md
data/: Homo_sapiens-GRCh38-113-Gene-features.bed  Homo_sapiens-GRCh38-113-Gene-features.parquet  Homo_sapiens-GRCh38-113-MergedExons-features.parquet
pydantic-data-models-examples/: README.md  pyproject.toml
pydantic-data-models-examples/data/: Homo_sapiens-GRCh38-113-CDS_Counts-features.parquet  Homo_sapiens-GRCh38-113-CDS_Counts-features_with_errors.bed  Homo_sapiens-GRCh38-113-TSS-features.parquet  Homo_sapiens-GRCh38-113-TSS-features_strand_err.bed  Homo_sapiens-GRCh38-113-TSS-features_wrong_coord.bed
pydantic-data-models-examples/src/models/: __init__.py  ensembl_gff3.py  tss_bed.py
pydantic-data-models-examples/src/pydantic_data_models_examples/: __init__.py  cli.py
pydantic-data-models-examples/src/pydantic_data_models_examples/models/: cds_counts_bed.py  ensembl_gff3.py  tss_bed.py  tss_parquet.py
